--- a/src/Components/MovieCard/MovieCard.module.scss
+++ b/src/Components/MovieCard/MovieCard.module.scss
@@ -1,14 +1,17 @@
 .moviecard {
     cursor: pointer;
+    height: 400px;
+    position: relative;
+    margin-bottom: 5rem;
+    width: 300px;
     & > div {
         border-radius: 5px;
-        height: 400px;
-        left: 50%;
         position: absolute;
-        width: 300px;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        transition: all .3s ease-in;
+        top: 0;
+        left: 0;
+        transition: all .2s ease-in;
+        width: 100%;
+		height: 100%;
 
     }
 
@@ -16,10 +19,9 @@
         box-shadow: 0 36px 10px -20px rgba(0,0,0,.2);
         overflow: hidden;
         z-index: 1;
-        & img {
-            object-fit: contain;
-            width: 100%;
-        }
+		background-position: center;
+        background-size: cover;
+        background-color: rgba(0,0,0,.2);
     }
 
     &Info{
@@ -29,9 +31,9 @@
 
 .slide {
     & > *:first-child{
-        transform: translate(-50%, calc(-50% - 40px))
+        transform: translate(0, -40px)
     }
     & > *:last-child{
-        transform: translate(-50%, calc(-50% + 40px)) scale(1.1)
+        transform: translate(0, 40px) scale(1.1)
     }
 }
