--- a/src/styles/generic.scss
+++ b/src/styles/generic.scss
@@ -1,3 +1,12 @@
+@import './variables';
+
 body {
-    background-color: lightblue;
+    height: 100%;
+    width: 100vw;
+    // background-image: url(../assets/venom.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: #000;
+    backdrop-filter: blur(50px);
 }
