--- a/src/styles/generic.scss
+++ b/src/styles/generic.scss
@@ -1,12 +1,21 @@
 @import './variables';
 
+*, 
+html{
+    font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    height: 100%;
-    width: 100vw;
+    min-height: 100vh;
+    width: 100%;
     // background-image: url(../assets/venom.jpg);
     background-size: cover;
-    background-position: center center;
+    background-position: center;
     background-repeat: no-repeat;
-    background-color: #000;
-    backdrop-filter: blur(50px);
+    background-color:#141414;
+    // color: $color-white;
+    backdrop-filter: blur(40px);
 }
