--- a/src/Components/SearchField/SearchField.module.scss
+++ b/src/Components/SearchField/SearchField.module.scss
@@ -6,7 +6,7 @@
     border-radius: 2.5rem;
     border: 1px solid $color-grey-3;
     background: transparent;
-    padding: .3rem 1.5rem;
+    padding: 0 1.5rem;
     margin-bottom: 4rem;
     margin: 0 auto;
     width: 50%;
@@ -17,7 +17,6 @@
     -o-transition: all 0.30s ease-in-out;
 
     &:hover{
-        // box-shadow: 0 0 5px rgba(81, 203, 238, 1);
         box-shadow: 0 0 5px $color-torquoise;
       }
 
@@ -34,6 +33,10 @@
         font-size: 1.3rem;
         width: 80%;
         outline-width: 0;
+        -webkit-outline-widt: 0;
+        -moz-outline-widt: 0;
+        -ms-outline-widt: 0;
+        -o-outline-widt: 0;
         padding: 1rem;
         &::placeholder{
             color: $color-grey-2;
