--- a/src/pages/favlist/fav.module.scss
+++ b/src/pages/favlist/fav.module.scss
@@ -68,7 +68,7 @@
     margin-bottom: .5rem;
   }
 
-  @media (max-width:400px) {
+  @media (max-width:500px) {
     width: 70%;
     font-size: .5rem;
     margin-right: 2rem;
@@ -79,12 +79,15 @@
   color: $color-torquoise-1;
   margin-bottom: 2rem;
   text-transform: capitalize;
+   @media (max-width: 400px) {
+     font-size: .7rem;
+   }
 }
 
 .movieSummaryContainer{
   width: 50%;
 
-  @media (max-width:400px) {
+  @media (max-width:1000px) {
     width: 100%;
   }
 }
