--- a/src/pages/favlist/fav.module.scss
+++ b/src/pages/favlist/fav.module.scss
@@ -25,7 +25,7 @@
   transition: all .2s ease-in-out;
 
   &:hover{
-    & > *:not(:last-child){
+    & h2,p{
       color: $color-white;
     }
   }
@@ -49,7 +49,7 @@
   transition: all .2s ease-in-out;
 
   &:hover {
-    color: tomat;
+    color: tomato;
   }
 
   & svg {
